[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Character/States/StateManager.gd" type="Script" id=2]
[ext_resource path="res://Character/States/StateMove.gd" type="Script" id=3]
[ext_resource path="res://Character/States/StateIdle.gd" type="Script" id=4]
[ext_resource path="res://Enemy.gd" type="Script" id=5]
[ext_resource path="res://Character/InputManager.gd" type="Script" id=6]
[ext_resource path="res://Character/MovemementManager.gd" type="Script" id=7]
[ext_resource path="res://ShipEngine.gd" type="Script" id=8]
[ext_resource path="res://Assets/laserRed04.png" type="Texture" id=9]
[ext_resource path="res://Character/WeaponManager.gd" type="Script" id=10]
[ext_resource path="res://Character/Enemy/Behavior.gd" type="Script" id=11]
[ext_resource path="res://Character/DamageManager.gd" type="Script" id=12]
[ext_resource path="res://Character/States/StateDead.gd" type="Script" id=13]
[ext_resource path="res://Character/Feedback/FeedbackParticlesExplosion.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.9847, 23 )

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 3, 3 ), Vector2( 4, 4 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_ended"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("ShipEngine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deactivate"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("ShipEngine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate"
} ]
}

[node name="Enemy" type="Area2D"]
rotation = -0.00127678
script = ExtResource( 5 )
state_manager_path = NodePath("StateManager")
input_manager_path = NodePath("InputManager")
movement_manager_path = NodePath("MovementManager")
animation_player_path = NodePath("AnimationPlayer")
weapon_manager_path = NodePath("WeaponManager")
damage_manager_path = NodePath("DamageManager")

[node name="DamageManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Behavior" type="Node" parent="."]
script = ExtResource( 11 )

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="MovementManager" type="Node" parent="."]
script = ExtResource( 7 )
FRICTION_DELTA = 40.0
ACCELERATION_DELTA = 40.0
MAX_SPEED = 10.0

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( 40, 0.051 )
script = ExtResource( 10 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 2 )
initial_state_path = NodePath("StateIdle")
debug = true

[node name="StateIdle" type="Node" parent="StateManager"]
script = ExtResource( 4 )

[node name="StateMove" type="Node" parent="StateManager"]
script = ExtResource( 3 )

[node name="StateDead" type="Node" parent="StateManager"]
script = ExtResource( 13 )

[node name="ShipEngine" type="Node2D" parent="."]
position = Vector2( -7.99999, -0.0102142 )
rotation = 3.14159
script = ExtResource( 8 )

[node name="SpriteEnemy" type="Sprite" parent="ShipEngine"]
position = Vector2( -15.9898, -8.02042 )
rotation = -1.5708
texture = ExtResource( 9 )
offset = Vector2( 0, -20 )

[node name="SpriteEnemy2" type="Sprite" parent="ShipEngine"]
position = Vector2( -16.0102, 7.97956 )
rotation = -1.5708
texture = ExtResource( 9 )
offset = Vector2( 0, -20 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.79351e-10, -9.53676e-07 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Dead = SubResource( 4 )
anims/Idle = SubResource( 2 )
anims/Move = SubResource( 3 )

[node name="Feedback" type="Node" parent="."]

[node name="FeedbackParticles" parent="Feedback" instance=ExtResource( 14 )]

[connection signal="out_of_health" from="." to="Feedback/FeedbackParticles" method="perform"]
