[gd_scene load_steps=11 format=2]

[ext_resource path="res://EnemyFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/theme.tres" type="Theme" id=2]
[ext_resource path="res://ActivatorArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://LabelText.gd" type="Script" id=5]
[ext_resource path="res://GUI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Character/States/StateManager.gd" type="Script" id=7]
[ext_resource path="res://Character/DamageManager.gd" type="Script" id=8]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0, 0.1) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 7 )
shader_param/flash_color = Color( 0.941176, 0.054902, 0.054902, 1 )
shader_param/flash_modifier = 0.0

[node name="SceneTest2" type="Node2D"]

[node name="ActivatorArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 110, 90 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 87 )

[node name="EnemyFloor" parent="." instance=ExtResource( 1 )]
position = Vector2( 130, 120 )

[node name="DamageManager" parent="EnemyFloor" index="0"]
script = ExtResource( 8 )

[node name="Behavior" parent="EnemyFloor" index="1"]
shoot_time = Vector2( 1, 1 )

[node name="StateManager" parent="EnemyFloor" index="5"]
script = ExtResource( 7 )

[node name="FeedbackFlash" parent="EnemyFloor/Feedback" index="1"]
material_flash = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "00"
script = ExtResource( 5 )

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 6 )]

[connection signal="health_changed" from="Player" to="CanvasLayer/Label" method="set_text"]

[editable path="EnemyFloor"]
